tests/e2e/keywords/foreach_is_keyword.error
Error: syntax error in story at line 1, column 9

1|    foreach = 1
              ^

E0041: `=` is not allowed here
